[gd_scene load_steps=4 format=3 uid="uid://h7qle236u1kg"]

[ext_resource type="Script" uid="uid://b4ba11u33v2fm" path="res://battle_screen/win_lose.gd" id="1_3qyw6"]
[ext_resource type="Texture2D" uid="uid://c2gnwlmrykfik" path="res://images/battle_scene/win_lose_panel.png" id="1_t3lu6"]
[ext_resource type="Texture2D" uid="uid://dma4nvgd3vwdj" path="res://images/battle_scene/win1.png" id="3_ihvdb"]

[node name="WinLose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3qyw6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_t3lu6")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="WinLoseLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.48235294, 0.32156864, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 40
text = "You've Won!"
horizontal_alignment = 1

[node name="ExpLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You've earned 250 exp!
You've gained your clan 250 exp!"
horizontal_alignment = 1

[node name="Pic" type="TextureRect" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ihvdb")

[node name="ReturnButton" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "Return to Selection Window"

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
